Fix z-index of form

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ form{
   background-color: white;
   position: fixed;
   padding: 10px;
+  z-index: 1;
 }
 
 button{
